# sdl3-build

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
android/android-35/debug/arm64-v8a/lib/cmake/SDL3/: SDL3sharedTargets-debug.cmake
android/android-35/release/arm64-v8a/lib/cmake/SDL3/: SDL3sharedTargets-release.cmake
android/android-35/release/arm64-v8a/lib/pkgconfig/: sdl3.pc
emscripten/debug/lib/cmake/SDL3/: SDL3staticTargets-debug.cmake  SDL3staticTargets.cmake
emscripten/release/include/SDL3/: SDL_revision.h
emscripten/release/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
emscripten/release/lib/pkgconfig/: sdl3.pc
windows/release/lib/: SDL3.lib
